[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pybullet_blocks"
version = "0.1.0"
description = "PyBullet blocks environments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "numpy",
   "pybullet_helpers@git+https://github.com/tomsilver/pybullet-helpers.git",
   "task_then_motion_planning@git+https://github.com/tomsilver/task-then-motion-planning.git",
   "gymnasium",
   "moviepy",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pybullet_blocks = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = [".venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
disable_error_code = "attr-defined"
exclude = [".venv/*"]

[[tool.mypy.overrides]]
module = [
    "pybullet.*",
]
ignore_missing_imports = true
